[gd_scene load_steps=6 format=3 uid="uid://brkitvo6d22fj"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_shjtf"]
[ext_resource type="Texture2D" uid="uid://cd70xfover6k4" path="res://assets/textures/ui/neon.png" id="2_44rr2"]
[ext_resource type="Texture2D" uid="uid://cc0qcbv2oquwp" path="res://assets/textures/ui/papajbadass.png" id="3_a1agm"]

[sub_resource type="LabelSettings" id="LabelSettings_l3nu6"]
font_size = 46
outline_size = 9
outline_color = Color(1, 0.2, 0.807843, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4hplp"]
font_size = 10

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shjtf")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.0
offset_right = 149.0
offset_bottom = 193.0
grow_horizontal = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Neon Knights"
label_settings = SubResource("LabelSettings_l3nu6")
horizontal_alignment = 1

[node name="AKA" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AKA The Boomer Shooter"
label_settings = SubResource("LabelSettings_4hplp")
horizontal_alignment = 1

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "simple... Options"
text = "Options"
alignment = 0

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Resume the game"
text = "Resume"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Quit the game"
text = "Quit Game"
alignment = 0

[node name="OptionsMenuControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="OptionsMenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.741176, 0, 0.780392, 0.0901961)

[node name="OptionsMenu" type="VBoxContainer" parent="OptionsMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -85.0
offset_right = 55.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenuLabel" type="Label" parent="OptionsMenuControl/OptionsMenu"]
layout_mode = 2
text = "Options Menu"

[node name="Option_01" type="Button" parent="OptionsMenuControl/OptionsMenu"]
layout_mode = 2
text = "Option_01
"

[node name="Option_02" type="Button" parent="OptionsMenuControl/OptionsMenu"]
layout_mode = 2
text = "Option_02
"

[node name="Option_03" type="Button" parent="OptionsMenuControl/OptionsMenu"]
layout_mode = 2
text = "Option_03
"

[node name="BackButton" type="Button" parent="OptionsMenuControl/OptionsMenu"]
layout_mode = 2
text = "< Back"

[node name="neon" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 512.0
offset_bottom = 512.0
texture = ExtResource("2_44rr2")
flip_v = true

[node name="neon2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 512.0
grow_horizontal = 0
texture = ExtResource("2_44rr2")
flip_h = true
flip_v = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_a1agm")

[connection signal="button_up" from="VBoxContainer/Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="OptionsMenuControl/OptionsMenu/BackButton" to="." method="_on_back_button_button_up"]
